# cg

./: README.md
1846776_1924839_TP2/: Skybox.cpp  Texture2D.cpp  main.cpp
Project/: Cst.cpp  Cst.h  FBO.h  Gazon.cpp  Gazon.h  GrilleQuads.h  Modele3dAbstrait.h  Modele3dObj.cpp  NuanceurProg.cpp  NuanceurProg.h  Skybox.cpp  SurfaceBSplinaire.cpp  SurfaceNode.cpp  SurfaceNode.h  TP4.vcxproj  TextureCubemap.cpp  Var.cpp  Var.h  main.cpp  noise.cpp  noise.h
Project/Nuanceurs/: blurFXSommets.glsl  debugFragments.glsl  debugSommets.glsl  gazonFragments.glsl  gazonSommets.glsl  nuanceurTessCtrl.glsl  nuanceurTessEval.glsl  skyBoxSommets.glsl
Project/ObjParser/: ObjParser.h  ParserTextAbstrait.cpp  ParserTextAbstrait.h  StringUtils.cpp
TP2/: CMakeLists.txt  Cst.cpp  Cst.h  Gazon.cpp  Gazon.h  GrilleQuads.cpp  GrilleQuads.h  Materiau.h  Modele3dAbstrait.cpp  Modele3dAbstrait.h  Modele3dObj.cpp  Modele3dObj.h  Reponses.txt  Skybox.cpp  Skybox.h  SurfaceBSplinaire.cpp  SurfaceBSplinaire.h  TP2.sln  TP2.vcxproj  Texture2D.cpp  Texture2D.h  TextureAbstraite.cpp  TextureAbstraite.h  TextureCubemap.cpp  TextureCubemap.h  Var.cpp  Var.h  main.cpp  noise.cpp  noise.h
TP2/Debug/: TP2.ilk  vc142.idb
TP2/Debug/TP2.tlog/: CL.read.1.tlog  (+7 more)
TP2/Nuanceurs/: carteFragments.glsl  carteSommets.glsl  gazonFragments.glsl  gazonSommets.glsl  skyBoxFragments.glsl  skyBoxSommets.glsl
TP2/ObjParser/: Geometry.h  ObjParser.cpp  ObjParser.h  Vecteur3.h
TP3/: New Text Document.txt  Réponses.txt
TP3/TP3/: CMakeLists.txt  Couleur.cpp  Couleur.h  Cst.h  ISurface.cpp  ISurface.h  Intersection.cpp  Intersection.h  Matrice4.cpp  Matrice4.h  NuanceurProg.cpp  Plan.cpp  Plan.h  Quadrique.cpp  Quadrique.h  Rayon.cpp  Scene.cpp  Scene.h  Singleton.h  StringUtils.h  TP3.sln  Triangle.cpp  Triangle.h  Var.cpp  Var.h  Vecteur3.cpp  Vecteur3.h  main.cpp  textfile.cpp  textfile.h
TP3/TP3/TP3/: Lumiere.cpp  Lumiere.h  MathUtils.h  NuanceurProg.h  Quadrique.cpp  Quadrique.h  Rayon.h  Scene.cpp  StringUtils.cpp  TP3.vcxproj  Triangle.cpp  Vecteur3.h
TP3/TP3/TP3/Debug/: TP3.exe.recipe  TP3.ilk  TP3.vcxproj.FileListAbsolute.txt  vc142.idb
TP3/TP3/TP3/Debug/TP3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TP3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TP3/TP3/TP3/Nuanceurs/: quadFragments.glsl  quadSommets.glsl
TP3/TP3/enc_temp_folder/4281a78abf84453bb8eb6b73533a7dca/: Scene.cpp
TP4/1846776_1924839_TP4/: FBO.cpp  gazonFragments.glsl  gazonSommets.glsl  main.cpp  modele3DFragments.glsl  modele3DSommets.glsl
TP4/TP4/: FBO.cpp  Gazon.h  GrilleQuads.cpp  Materiau.cpp  Modele3dAbstrait.cpp  Modele3dObj.h  NuanceurProg.cpp  Reponses.txt  Réponses.docx  Réponses.txt  Skybox.h  TP4.vcxproj  TextureCubemap.h  Var.h  main.cpp
(+11 files in other folders)
